# Credo

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/schemas/: __init__.py
ml_engine/artifacts/: model_a01.json
ml_engine/training/: data_cleaning.ipynb  training_models.ipynb
ml_engine/training/data/: preparing_data.ipynb
ml_engine/training/data/clean/: final_data.csv
