[project]
name = "credo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "jupyter-copilot>=0.1.5",
    "jupyterlab>=4.5.2",
    "pyrefly>=0.49.0",
    "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pyrefly]
project-includes = ["app"]
project-excludes = [
  "**/node_modules",
  "**/__pycache__",
  "**/*.venv/**",
  "**/.[!/.]*/**",
]
search-path = ["app"]

python-version = "3.13"
python-interpreter-path = ".venv/bin/python3"
