[project]
name = "credo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "jupyter-copilot>=0.1.5",
    "jupyterlab>=4.5.2",
    "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["app", "ml_engine"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
